tests/functional/lang/eval-fail-elemAt-1.err.exp
error:
       … while calling the 'elemAt' builtin
         at /pwd/lang/eval-fail-elemAt-1.nix:1:1:
            1| builtins.elemAt "foo" (-1)
             | ^
            2|

       … while evaluating the first argument passed to 'builtins.elemAt'

       error: expected a list but found a string: "foo"
